fixed home page intro text block clipping on larger desktop

--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -1,4 +1,4 @@
-@use '../../styles';
+@use "../../styles";
 
 @include styles.pageHeaderFadedHome();
 
@@ -120,7 +120,7 @@
           justify-content: flex-end;
           align-items: center;
           width: 100%;
-          height: 650px;
+          height: auto;
           overflow: hidden;
           @media (max-width: styles.$screen-sm-max) {
             height: auto;
@@ -130,8 +130,18 @@
           .welcome-text {
             position: relative;
             @include styles.flexCenter(flex-start, column);
-            width: 550px;
+            width: 60%;
+            height: auto;
             margin: 12vw 50px 0px 0px;
+            @media (min-width: 1900px) {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: flex-start;
+              width: 60%;
+              height: auto;
+              margin: 5vw 40px 0px 0px;
+            }
             @media (max-width: styles.$screen-lg-max) {
               display: flex;
               flex-direction: column;
@@ -166,8 +176,10 @@
               width: 100%;
               height: 100%;
               margin: 0px 0px 40px 0px;
-
               overflow: hidden;
+              @media (min-width: 1900px) {
+                padding: 2vw 0vw 0vw 0vw;
+              }
               @media (max-width: styles.$screen-lg-max) {
                 width: 80%;
               }
